# athan-desktop-releases

./: .gitignore  CLAUDE.md  README.md  icon-variants.html  index.html  package-lock.json  package.json
.github/workflows/: release.yml
sound/: Alaqsa.wma  Dua.wma  Egypt.wma  Fajr.wma  Madina.wma  Makkah.wma
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  lib.rs  location.rs  main.rs  prayer.rs  scheduler.rs  tray.rs  updater.rs
variants/: index.html  settings-a.html  settings-b.html  settings-c.html  settings-fixes-2.html  settings-fixes.html  settings-index.html  variant-a.html  variant-b.html  variant-c.html
